# playbook-validator

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/satorici/validator/: __init__.py  _validator.py  exceptions.py  warnings.py
src/satorici/validator/schemas/: command.json  import.json  input.json  settings.json  test.json
tests/: test_node_validation.py  test_playbook_validator.py  test_reference_finder.py
